@@ -1,4 +1,6 @@
  20160621 (T.S.):
+ - bfd-reloc-arm.c: reworked THM_CALL/THM_JUMP24; no veneer support, though.
+ 20160621 (T.S.):
  - bfd-reloc-arm.c: added skeleton for ARM
  20160621 (T.S.):
  - pmbfd.h, bfd-reloc-i386.c, bfd-reloc-m68k.c, bfd-reloc-powerpc.c,
